# docker_grpc_experiment

./: Dockerfile
Docker/: build_grpc.sh  build_server.sh
node_1/: CMakeLists.txt  README.md
node_1/include/: dummy_header.hpp  server_implementation.hpp
node_1/src/: dummy_class.cpp  main.cpp  server_implementation.cpp
node_1/unit_tests/: dummy_test.cpp  server_implementation_tests.cpp
node_2/: .gitignore  CMakeLists.txt
node_2/include/: client_implementation.hpp
node_2/src/: client_implementation.cpp  main.cpp
node_2/unit_tests/: client_implementation_tests.cpp
protos/: AddressBook.proto  Service.proto  Status.proto
